syntax = "proto3";
import "google/protobuf/empty.proto";

package auth;

option go_package = "./gen";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}

  rpc CreateActivities(CreateActivitiesRequest) returns (GlobalResponse) {}
  rpc DeleteActivities(DeleteActivitiesRequest) returns (GlobalResponse) {}
  rpc GetActivities(google.protobuf.Empty) returns (ActivitiesResponse) {}
  
  rpc SetUserPermissions(SetUserPermissionsRequest) returns (SetUserPermissionsResponse){}
  rpc GetUserPermissions(GetUserActivitiesRequest) returns (ActivitiesResponse) {}
}

//DeleteActivities
message DeleteActivitiesRequest {
  string id =1;
}

//CreateActivities
message CreateActivitiesRequest {
  string id = 1;
  string parent = 2;
  string label = 3;
  string pathUrl = 4;
}

message GlobalResponse {
  string message = 1;
}

//GetUserActivities
message GetUserActivitiesRequest {
  string usersId = 1;
}

//CretePermissions
message SetUserPermissionsRequest{
  string usersId = 1;
  repeated string activityId = 2;
}
message SetUserPermissionsResponse{
  string message = 1;
}

//GetActivities
message Activitiy {
  int64 id = 1;
  string parent = 2;
  string label = 3;
  string pathUrl = 4;
}

message ActivitiesResponse {
  repeated Activitiy activity = 3;
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 userId = 3;
  string email = 4;
}